tests/baselines/reference/es5ExportEqualsDts(target=es2015).errors.txt
es5ExportEqualsDts.ts(4,16): error TS2454: Variable 'aVal' is used before being assigned.


==== es5ExportEqualsDts.ts (1 errors) ====
    class A {
        foo() {
            var aVal: A.B;
            return aVal;
                   ~~~~
!!! error TS2454: Variable 'aVal' is used before being assigned.
        }
    }
    
    namespace A {
        export interface B { }
    }
    
    export = A